@@ -29,7 +29,6 @@ import co.rsk.peg.federation.constants.FederationConstants;
 import co.rsk.peg.pegin.RejectedPeginReason;
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import org.ethereum.config.blockchain.upgrades.ActivationConfig;
 import org.ethereum.config.blockchain.upgrades.ConsensusRule;
 import org.ethereum.core.*;
@@ -43,44 +42,38 @@ import org.ethereum.vm.*;
  * @author martin.medina
  */
 public class BridgeEventLoggerImpl implements BridgeEventLogger {
-
-    private static final byte[] BRIDGE_CONTRACT_ADDRESS = PrecompiledContracts.BRIDGE_ADDR.getBytes();
-
     private final BridgeConstants bridgeConstants;
-    private final SignatureCache signatureCache;
     private final List<LogInfo> logs;
     private final ActivationConfig.ForBlock activations;
 
-    public BridgeEventLoggerImpl(
-        BridgeConstants bridgeConstants,
-        ActivationConfig.ForBlock activations,
-        List<LogInfo> logs,
-        SignatureCache signatureCache) {
-
+    public BridgeEventLoggerImpl(BridgeConstants bridgeConstants, ActivationConfig.ForBlock activations, List<LogInfo> logs) {
         this.activations = activations;
         this.bridgeConstants = bridgeConstants;
-        this.signatureCache = signatureCache;
         this.logs = logs;
     }
 
     @Override
-    public void logUpdateCollections(Transaction rskTx) {
+    public void logUpdateCollections(RskAddress sender) {
         CallTransaction.Function event = BridgeEvents.UPDATE_COLLECTIONS.getEvent();
-        byte[][] encodedTopicsInBytes = event.encodeEventTopics();
-        List<DataWord> encodedTopics = LogInfo.byteArrayToList(encodedTopicsInBytes);
-        byte[] encodedData = event.encodeEventData(rskTx.getSender(signatureCache).toString());
 
-        this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, encodedTopics, encodedData));
+        byte[][] encodedTopicsSerialized = event.encodeEventTopics();
+        List<DataWord> encodedTopics = getEncodedTopics(encodedTopicsSerialized);
+
+        byte[] encodedData = event.encodeEventData(sender.toHexString());
+
+        addLog(encodedTopics, encodedData);
     }
 
     @Override
     public void logAddSignature(FederationMember federationMember, BtcTransaction btcTx, byte[] rskTxHash) {
-        ECKey federatorPublicKey = getFederatorPublicKey(federationMember);
-        String federatorRskAddress = ByteUtil.toHexString(federatorPublicKey.getAddress());
-        logAddSignatureInSolidityFormat(rskTxHash, federatorRskAddress, federationMember.getBtcPublicKey());
+        ECKey federatorRskPublicKey = getFederatorRskPublicKey(federationMember);
+        String federatorRskAddress = ByteUtil.toHexString(federatorRskPublicKey.getAddress());
+        BtcECKey federatorBtcPublicKey = federationMember.getBtcPublicKey();
+
+        logAddSignatureInSolidityFormat(rskTxHash, federatorRskAddress, federatorBtcPublicKey);
     }
 
-    private ECKey getFederatorPublicKey(FederationMember federationMember) {
+    private ECKey getFederatorRskPublicKey(FederationMember federationMember) {
         if (!shouldUseRskPublicKey()) {
             return ECKey.fromPublicOnly(federationMember.getBtcPublicKey().getPubKey());
         }
@@ -94,37 +87,45 @@ public class BridgeEventLoggerImpl implements BridgeEventLogger {
 
     private void logAddSignatureInSolidityFormat(byte[] rskTxHash, String federatorRskAddress, BtcECKey federatorPublicKey) {
         CallTransaction.Function event = BridgeEvents.ADD_SIGNATURE.getEvent();
-        byte[][] encodedTopicsInBytes = event.encodeEventTopics(rskTxHash, federatorRskAddress);
-        List<DataWord> encodedTopics = LogInfo.byteArrayToList(encodedTopicsInBytes);
-        byte[] encodedData = event.encodeEventData(federatorPublicKey.getPubKey());
 
-        this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, encodedTopics, encodedData));
+        byte[][] encodedTopicsSerialized = event.encodeEventTopics(rskTxHash, federatorRskAddress);
+        List<DataWord> encodedTopics = getEncodedTopics(encodedTopicsSerialized);
+
+        byte[] federatorPublicKeySerialized = federatorPublicKey.getPubKey();
+        byte[] encodedData = event.encodeEventData(federatorPublicKeySerialized);
+
+        addLog(encodedTopics, encodedData);
     }
 
     @Override
     public void logReleaseBtc(BtcTransaction btcTx, byte[] rskTxHash) {
         CallTransaction.Function event = BridgeEvents.RELEASE_BTC.getEvent();
-        byte[][] encodedTopicsInBytes = event.encodeEventTopics(rskTxHash);
-        List<DataWord> encodedTopics = LogInfo.byteArrayToList(encodedTopicsInBytes);
-        byte[] encodedData = event.encodeEventData(btcTx.bitcoinSerialize());
 
-        this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, encodedTopics, encodedData));
+        byte[][] encodedTopicsSerialized = event.encodeEventTopics(rskTxHash);
+        List<DataWord> encodedTopics = getEncodedTopics(encodedTopicsSerialized);
+
+        byte[] rawBtcTxSerialized = btcTx.bitcoinSerialize();
+        byte[] encodedData = event.encodeEventData(rawBtcTxSerialized);
+
+        addLog(encodedTopics, encodedData);
     }
 
     @Override
     public void logCommitFederation(Block executionBlock, Federation oldFederation, Federation newFederation) {
+        CallTransaction.Function event = BridgeEvents.COMMIT_FEDERATION.getEvent();
+
         // Convert old federation public keys in bytes array
         byte[] oldFederationFlatPubKeys = flatKeysAsByteArray(oldFederation.getBtcPublicKeys());
         String oldFederationBtcAddress = oldFederation.getAddress().toBase58();
+
         byte[] newFederationFlatPubKeys = flatKeysAsByteArray(newFederation.getBtcPublicKeys());
         String newFederationBtcAddress = newFederation.getAddress().toBase58();
 
         FederationConstants federationConstants = bridgeConstants.getFederationConstants();
         long newFedActivationBlockNumber = executionBlock.getNumber() + federationConstants.getFederationActivationAge(activations);
 
-        CallTransaction.Function event = BridgeEvents.COMMIT_FEDERATION.getEvent();
-        byte[][] encodedTopicsInBytes = event.encodeEventTopics();
-        List<DataWord> encodedTopics = LogInfo.byteArrayToList(encodedTopicsInBytes);
+        byte[][] encodedTopicsSerialized = event.encodeEventTopics();
+        List<DataWord> encodedTopics = getEncodedTopics(encodedTopicsSerialized);
 
         byte[] encodedData = event.encodeEventData(
             oldFederationFlatPubKeys,
@@ -134,61 +135,93 @@ public class BridgeEventLoggerImpl implements BridgeEventLogger {
             newFedActivationBlockNumber
         );
 
-        this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, encodedTopics, encodedData));
+        addLog(encodedTopics, encodedData);
+    }
+
+    @Override
+    public void logCommitFederationFailure(Block executionBlock, Federation proposedFederation) {
+        CallTransaction.Function event = BridgeEvents.COMMIT_FEDERATION_FAILED.getEvent();
+
+        byte[][] encodedTopicsSerialized = event.encodeEventTopics();
+        List<DataWord> encodedTopics = getEncodedTopics(encodedTopicsSerialized);
+
+        byte[] proposedFederationRedeemScriptSerialized = proposedFederation.getRedeemScript().getProgram();
+        long executionBlockNumber = executionBlock.getNumber();
+
+        byte[] encodedData = event.encodeEventData(
+            proposedFederationRedeemScriptSerialized,
+            executionBlockNumber
+        );
+
+        addLog(encodedTopics, encodedData);
     }
 
     @Override
     public void logLockBtc(RskAddress receiver, BtcTransaction btcTx, Address senderBtcAddress, Coin amount) {
         CallTransaction.Function event = BridgeEvents.LOCK_BTC.getEvent();
-        byte[][] encodedTopicsInBytes = event.encodeEventTopics(receiver.toString());
-        List<DataWord> encodedTopics = LogInfo.byteArrayToList(encodedTopicsInBytes);
 
-        byte[] encodedData = event.encodeEventData(btcTx.getHash().getBytes(), senderBtcAddress.toString(), amount.getValue());
+        byte[][] encodedTopicsSerialized = event.encodeEventTopics(receiver.toString());
+        List<DataWord> encodedTopics = getEncodedTopics(encodedTopicsSerialized);
 
-        this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, encodedTopics, encodedData));
+        byte[] btcTxHashSerialized = btcTx.getHash().getBytes();
+        byte[] encodedData = event.encodeEventData(
+            btcTxHashSerialized,
+            senderBtcAddress.toString(),
+            amount.getValue()
+        );
+
+        addLog(encodedTopics, encodedData);
     }
 
     @Override
     public void logPeginBtc(RskAddress receiver, BtcTransaction btcTx, Coin amount, int protocolVersion) {
         CallTransaction.Function event = BridgeEvents.PEGIN_BTC.getEvent();
-        byte[][] encodedTopicsInBytes = event.encodeEventTopics(receiver.toString(), btcTx.getHash().getBytes());
-        List<DataWord> encodedTopics = LogInfo.byteArrayToList(encodedTopicsInBytes);
+
+        byte[][] encodedTopicsSerialized = event.encodeEventTopics(receiver.toString(), btcTx.getHash().getBytes());
+        List<DataWord> encodedTopics = getEncodedTopics(encodedTopicsSerialized);
 
         byte[] encodedData = event.encodeEventData(amount.getValue(), protocolVersion);
 
-        this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, encodedTopics, encodedData));
+        addLog(encodedTopics, encodedData);
     }
 
     @Override
     public void logReleaseBtcRequested(byte[] rskTransactionHash, BtcTransaction btcTx, Coin amount) {
         CallTransaction.Function event = BridgeEvents.RELEASE_REQUESTED.getEvent();
-        byte[][] encodedTopicsInBytes = event.encodeEventTopics(rskTransactionHash, btcTx.getHash().getBytes());
-        List<DataWord> encodedTopics = LogInfo.byteArrayToList(encodedTopicsInBytes);
+
+        byte[] btcTxHashSerialized = btcTx.getHash().getBytes();
+        byte[][] encodedTopicsSerialized = event.encodeEventTopics(rskTransactionHash, btcTxHashSerialized);
+        List<DataWord> encodedTopics = getEncodedTopics(encodedTopicsSerialized);
+
         byte[] encodedData = event.encodeEventData(amount.getValue());
 
-        this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, encodedTopics, encodedData));
+        addLog(encodedTopics, encodedData);
     }
 
     @Override
     public void logRejectedPegin(BtcTransaction btcTx, RejectedPeginReason reason) {
         CallTransaction.Function event = BridgeEvents.REJECTED_PEGIN.getEvent();
-        byte[][] encodedTopicsInBytes = event.encodeEventTopics(btcTx.getHash().getBytes());
-        List<DataWord> encodedTopics = LogInfo.byteArrayToList(encodedTopicsInBytes);
+
+        byte[] btcTxHashSerialized = btcTx.getHash().getBytes();
+        byte[][] encodedTopicsSerialized = event.encodeEventTopics(btcTxHashSerialized);
+        List<DataWord> encodedTopics = getEncodedTopics(encodedTopicsSerialized);
 
         byte[] encodedData = event.encodeEventData(reason.getValue());
 
-        this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, encodedTopics, encodedData));
+        addLog(encodedTopics, encodedData);
     }
 
     @Override
-    public void logUnrefundablePegin(BtcTransaction btcTx, UnrefundablePeginReason reason) {
+    public void logNonRefundablePegin(BtcTransaction btcTx, NonRefundablePeginReason reason) {
         CallTransaction.Function event = BridgeEvents.UNREFUNDABLE_PEGIN.getEvent();
-        byte[][] encodedTopicsInBytes = event.encodeEventTopics(btcTx.getHash().getBytes());
-        List<DataWord> encodedTopics = LogInfo.byteArrayToList(encodedTopicsInBytes);
+
+        byte[] btcTxHashSerialized = btcTx.getHash().getBytes();
+        byte[][] encodedTopicsSerialized = event.encodeEventTopics(btcTxHashSerialized);
+        List<DataWord> encodedTopics = getEncodedTopics(encodedTopicsSerialized);
 
         byte[] encodedData = event.encodeEventData(reason.getValue());
 
-        this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, encodedTopics, encodedData));
+        addLog(encodedTopics, encodedData);
     }
 
     @Override
@@ -202,58 +235,67 @@ public class BridgeEventLoggerImpl implements BridgeEventLogger {
 
     private void logReleaseBtcRequestReceived(String sender, byte[] btcDestinationAddress, Coin amountInSatoshis) {
         CallTransaction.Function event = BridgeEvents.RELEASE_REQUEST_RECEIVED_LEGACY.getEvent();
-        byte[][] encodedTopicsInBytes = event.encodeEventTopics(sender);
-        List<DataWord> encodedTopics = LogInfo.byteArrayToList(encodedTopicsInBytes);
+
+        byte[][] encodedTopicsSerialized = event.encodeEventTopics(sender);
+        List<DataWord> encodedTopics = getEncodedTopics(encodedTopicsSerialized);
 
         byte[] encodedData = event.encodeEventData(btcDestinationAddress, amountInSatoshis.getValue());
 
-        this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, encodedTopics, encodedData));
+        addLog(encodedTopics, encodedData);
     }
 
     private void logReleaseBtcRequestReceived(String sender, String btcDestinationAddress, co.rsk.core.Coin amountInWeis) {
         CallTransaction.Function event = BridgeEvents.RELEASE_REQUEST_RECEIVED.getEvent();
-        byte[][] encodedTopicsInBytes = event.encodeEventTopics(sender);
-        List<DataWord> encodedTopics = LogInfo.byteArrayToList(encodedTopicsInBytes);
+
+        byte[][] encodedTopicsSerialized = event.encodeEventTopics(sender);
+        List<DataWord> encodedTopics = getEncodedTopics(encodedTopicsSerialized);
 
         byte[] encodedData = activations.isActive(ConsensusRule.RSKIP427) ?
             event.encodeEventData(btcDestinationAddress, amountInWeis.asBigInteger()) :
             event.encodeEventData(btcDestinationAddress, amountInWeis.toBitcoin().getValue());
 
-        this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, encodedTopics, encodedData));
+        addLog(encodedTopics, encodedData);
     }
 
     @Override
     public void logReleaseBtcRequestRejected(RskAddress sender, co.rsk.core.Coin amountInWeis, RejectedPegoutReason reason) {
         CallTransaction.Function event = BridgeEvents.RELEASE_REQUEST_REJECTED.getEvent();
-        byte[][] encodedTopicsInBytes = event.encodeEventTopics(sender.toHexString());
-        List<DataWord> encodedTopics = LogInfo.byteArrayToList(encodedTopicsInBytes);
+
+        byte[][] encodedTopicsSerialized = event.encodeEventTopics(sender.toHexString());
+        List<DataWord> encodedTopics = getEncodedTopics(encodedTopicsSerialized);
 
         byte[] encodedData = activations.isActive(ConsensusRule.RSKIP427) ?
             event.encodeEventData(amountInWeis.asBigInteger(), reason.getValue()) :
             event.encodeEventData(amountInWeis.toBitcoin().getValue(), reason.getValue());
 
-        this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, encodedTopics, encodedData));
+        addLog(encodedTopics, encodedData);
     }
 
     @Override
     public void logBatchPegoutCreated(Sha256Hash btcTxHash, List<Keccak256> rskTxHashes) {
         CallTransaction.Function event = BridgeEvents.BATCH_PEGOUT_CREATED.getEvent();
-        byte[][] encodedTopicsInBytes = event.encodeEventTopics(btcTxHash.getBytes());
-        List<DataWord> encodedTopics = LogInfo.byteArrayToList(encodedTopicsInBytes);
+
+        byte[] btcTxHashSerialized = btcTxHash.getBytes();
+        byte[][] encodedTopicsSerialized = event.encodeEventTopics(btcTxHashSerialized);
+        List<DataWord> encodedTopics = getEncodedTopics(encodedTopicsSerialized);
 
         byte[] serializedRskTxHashes = serializeRskTxHashes(rskTxHashes);
         byte[] encodedData = event.encodeEventData(serializedRskTxHashes);
 
-        this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, encodedTopics, encodedData));
+        addLog(encodedTopics, encodedData);
     }
 
     @Override
     public void logPegoutConfirmed(Sha256Hash btcTxHash, long pegoutCreationRskBlockNumber) {
         CallTransaction.Function event = BridgeEvents.PEGOUT_CONFIRMED.getEvent();
-        byte[][] encodedTopicsInBytes = event.encodeEventTopics(btcTxHash.getBytes());
-        List<DataWord> encodedTopics = LogInfo.byteArrayToList(encodedTopicsInBytes);
+
+        byte[] btcTxHashSerialized = btcTxHash.getBytes();
+        byte[][] encodedTopicsSerialized = event.encodeEventTopics(btcTxHashSerialized);
+        List<DataWord> encodedTopics = getEncodedTopics(encodedTopicsSerialized);
+
         byte[] encodedData = event.encodeEventData(pegoutCreationRskBlockNumber);
-        this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, encodedTopics, encodedData));
+
+        addLog(encodedTopics, encodedData);
     }
 
     @Override
@@ -263,18 +305,21 @@ public class BridgeEventLoggerImpl implements BridgeEventLogger {
         }
 
         CallTransaction.Function event = BridgeEvents.PEGOUT_TRANSACTION_CREATED.getEvent();
-        byte[][] encodedTopicsInBytes = event.encodeEventTopics(btcTxHash.getBytes());
-        List<DataWord> encodedTopics = LogInfo.byteArrayToList(encodedTopicsInBytes);
+
+        byte[] btcTxHashSerialized = btcTxHash.getBytes();
+        byte[][] encodedTopicsSerialized = event.encodeEventTopics(btcTxHashSerialized);
+        List<DataWord> encodedTopics = getEncodedTopics(encodedTopicsSerialized);
 
         byte[] serializedOutpointValues = UtxoUtils.encodeOutpointValues(outpointValues);
         byte[] encodedData = event.encodeEventData(serializedOutpointValues);
-        this.logs.add(new LogInfo(BRIDGE_CONTRACT_ADDRESS, encodedTopics, encodedData));
+
+        addLog(encodedTopics, encodedData);
     }
 
     private byte[] flatKeys(List<BtcECKey> keys, Function<BtcECKey, byte[]> parser) {
         List<byte[]> pubKeys = keys.stream()
                 .map(parser)
-                .collect(Collectors.toList());
+                .toList();
         int pubKeysLength = pubKeys.stream().mapToInt(key -> key.length).sum();
 
         byte[] flatPubKeys = new byte[pubKeysLength];
@@ -294,7 +339,7 @@ public class BridgeEventLoggerImpl implements BridgeEventLogger {
     private byte[] serializeRskTxHashes(List<Keccak256> rskTxHashes) {
         List<byte[]> rskTxHashesList = rskTxHashes.stream()
             .map(Keccak256::getBytes)
-            .collect(Collectors.toList());
+            .toList();
         int rskTxHashesLength = rskTxHashesList.stream().mapToInt(key -> key.length).sum();
 
         byte[] serializedRskTxHashes = new byte[rskTxHashesLength];
@@ -305,5 +350,16 @@ public class BridgeEventLoggerImpl implements BridgeEventLogger {
         }
 
         return serializedRskTxHashes;
+    }
+
+    private List<DataWord> getEncodedTopics(byte[][] encodedTopicsSerialized) {
+        return LogInfo.byteArrayToList(encodedTopicsSerialized);
+    }
+
+    private void addLog(List<DataWord> eventEncodedTopics, byte[] eventEncodedData) {
+        RskAddress bridgeContractAddress = PrecompiledContracts.BRIDGE_ADDR;
+        LogInfo newLog = new LogInfo(bridgeContractAddress.getBytes(), eventEncodedTopics, eventEncodedData);
+
+        this.logs.add(newLog);
     }
 }
